# PluginPwn

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  scan_plugins.py
docker/: docker-compose.yml  wp-setup.sh
exploits/: CVE-2020-35489.py  CVE-2020-35489_LAB_ASSISTED.py  CVE-2022-1329.py  CVE-2023-23489.py  CVE-2023-6634_FAILED.py  CVE-2023-6970.py  CVE-2024-10646.py  CVE-2024-10924.py  CVE-2024-12365.py  CVE-2024-3549.py  CVE-2024-4041.py  CVE-2024-9636_FAILED.py  CVE-2025-12197.py  CVE-2025-12473.py  CVE-2025-1323.py  CVE-2025-14675.py  CVE-2025-15520.py  CVE-2025-2010_FAILED.py  CVE-2025-39597.py  CVE-2025-5287.py  CVE-2025-6691_FAILED.py  CVE-2025-6851.py  CVE-2025-6970.py  CVE-2025-7965.py  CVE-2026-0658.py  CVE-2026-1252.py  CVE-2026-1321.py  CVE-2026-1357.py  CVE-2026-1492_FAILED.py  CVE-2026-1566_FAILED.py  CVE-2026-1608.py  CVE-2026-1825.py  CVE-2026-1857.py  CVE-2026-1992.py  CVE-2026-2420.py  CVE-2026-2433.py  CVE-2026-2599.py  CVE-2026-2631.py  CVE-2026-3045.py  CVE-2026-3132.py  (+8 more)
reports/: CVE-2020-35489.json  CVE-2022-1329.json  CVE-2023-23489.json  CVE-2023-6634.json  CVE-2023-6970.json  CVE-2024-10646.json  CVE-2024-10924.json  CVE-2024-12365.json  CVE-2024-3469.json  CVE-2024-3549.json  CVE-2024-4041.json  CVE-2024-9636.json  CVE-2025-12197.json  CVE-2025-12473.json  CVE-2025-1323.json  CVE-2025-14675.json  CVE-2025-15520.json  CVE-2025-2010.json  CVE-2025-39597.json  CVE-2025-5287.json  CVE-2025-6691.json  CVE-2025-6851.json  CVE-2025-6970.json  CVE-2025-7965.json  CVE-2026-0658.json  CVE-2026-1252.json  CVE-2026-1321.json  (+24 more)
(+11 files in other folders)
