[project]
name = "plugin-pwn"
version = "0.1.0"
description = "End-to-end WordPress CVE exploit pipeline — lookup, download, PoC generation, and lab verification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "claude-agent-sdk",
    "httpx>=0.28.1",
    "playwright>=1.52.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
]
